lbhj.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-bl
spec:
  selector:
    name: clust-in
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
