svcs.yaml
apiVersion: v1
kind: Service
metadata:
  name: pots-service
  labels:
    name: clust-in
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
  - port: 80
    targetPort: 8080
