ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-rou
  labels:
    appn: ingressslk
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: servicename
              servicePort: 8080
